ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: localhost.ingress
      http:
        paths:
          - pathType: Prefix
            path: "/ing"
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
